# Process_Manager

./: CMakeLists.txt  README.md  install.ps1  install.sh  procmanager  procmanager-gui  procmanager-gui.c  procmanager.c
help/: procmanager-gui.ps1  procmanager.ps1
man/: process_manager_cli.1  process_manager_gui.1  procmanager-gui.1  procmanager.1
